product_docs/docs/bart/2.5.9/bart_inst/index.mdx
---
navTitle: Installation Guide
title: "EDB Postgres Backup and Recovery Installation Guide"
legacyRedirects:
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/requirements_overview.html"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/conclusion.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/genindex.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/index.html"
---

This guide provides information about how to install and configure the EDB Backup and Recovery Tool (BART) 2.5.

<div id="requirements_overview" class="registered_link"></div>

## Requirements Overview

### Supported Platforms and Database Versions

-   To view a complete list of platforms that EDB supports, visit the [EDB website.](https://www.enterprisedb.com/services-support/edb-supported-products-and-platforms)

!!! Note
    BART 2.5 does not support CentOS/RHEL/OEL 6.x platforms. EDB recommends migrating the EDB products running on these platforms to a supported platform.

-   BART supports the following database versions:

    -   Advanced Server versions 9.6, 10, 11, and 12.
    -   PostgreSQL versions 9.6, 10, 11, and 12.

### Software Requirements

You require the following components to install BART.

-   BART Host Components - Use EDB packages to add BART host components; see [Installing BART](02_installing_bart/#installing-bart) for information about how to install these components.

-   Additional Components - In addition to the BART host components, the following components are required:

    -   The [Secure Shell (SSH) server daemon and Secure Copy (SCP) client programs](03_configuring_bart/#authorizing_ssh_scp_access) must be enabled and activated on the BART host as well as on the remote database server hosts on which BART will be managing backup and recovery.
    -   BART uses the `pg_basebackup` utility program when taking full backups.

### Limitation

BART supports taking only a full backup of standby servers; it does not support taking incremental or parallel backups of standby servers.
