product_docs/docs/bart/2.6/bart_inst/index.mdx
---
navTitle: Installation Guide
title: "EDB Postgres Backup and Recovery Installation Guide"
legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6/conclusion.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6/genindex.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6/index.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/conclusion.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/genindex.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.6.1/index.html"
---

This guide provides information about how to install and configure the EDB Backup and Recovery Tool (BART) 2.6.

<div id="requirements_overview" class="registered_link"></div>

## Requirements Overview

### Supported Platforms and Database Versions

!!! Note
    BART is not supported by EDB Postgres Advanced Server or PostgreSQL version 14 and later. EDB strongly recommends you move to Barman or pgBackRest as your backup recovery tool. See [Moving to a New Backup Tool](../bart_migration) for more information.


-   To view a complete list of supported platforms, see [Platform Compatibility](https://www.enterprisedb.com/platform-compatibility).

-   BART supports the following database distributions and versions:

    -   EDB Postgres Advanced Server versions 10, 11, 12, and 13.
    -   PostgreSQL versions 10, 11, 12, and 13.

### Software Requirements

You require the following components to install BART.

-   BART Host Components - Use EDB packages to add BART host components; see [Installing BART](02_installing_bart/#installing-bart) for information about how to install these components.

-   Additional Components - In addition to the BART host components, the following components are required:

    -   The [Secure Shell (SSH) server daemon and Secure Copy (SCP) client programs](03_configuring_bart/#authorizing_ssh_scp_access) must be enabled and activated on the BART host as well as on the remote database server hosts on which BART will be managing backup and recovery.
    -   BART uses the `pg_basebackup` utility program when taking full backups.

### Limitation

BART supports taking only a full backup of standby servers; it does not support taking incremental or parallel backups of standby servers.
